--- a/web/css/style.css
+++ b/web/css/style.css
@@ -399,16 +399,14 @@ html {
 .signup-page-container {
   width: 33%;
   max-height: 94vh;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
   overflow: auto;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 24, 128, 0.18);
           box-shadow: 0px 0px 10px 0px rgba(0, 24, 128, 0.18);
   padding: 40px;
   border-radius: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
 }
 
 .login-page-container::-webkit-scrollbar,
